# agroisync

./: .amplifyrc  .dockerignore  .editorconfig  .env.example  .eslintignore  .eslintrc.js  .eslintrc.json  .gitattributes  .github-actions-ignore  .gitignore  .golangci.yml  .graphqlconfig.yml  .lighthouserc.json  .lintstagedrc.js  .npmignore  .npmrc  .pagesignore  .pnpmrc  .prettierignore  .prettierrc.js  .vercelignore  .yaml-lint  .yarnrc  .yarnrc.yml  ACOES_IMEDIATAS.md  ADMIN-PANEL-FIXED.md  AGROISYNC_DEFINITIVO_FIX.md  AGROISYNC_DOMAIN_FIX.md  AGROISYNC_TOTAL_FIX.md  AGROTM_COMPLETE_FIX.md  ALL_ERRORS_FIXED.md  AMPLIFY-BUILD-FIX-README.md  AMPLIFY-DEPLOY-README.md  AMPLIFY_404_FIXED.txt  AMPLIFY_CLI_SETUP_README.md  AMPLIFY_CLI_STATUS.md  AMPLIFY_FINAL_CONFIG.txt  ANALISE_COMPLETA_AGROISYNC.md  ANALISE_COMPLETA_FUNCIONALIDADES.md  ANALISE_COMPLETA_SITE.md  (+505 more)
.github/: CODEOWNERS  KEystore-secrets-INSTRUCTIONS.md  PULL_REQUEST_TEMPLATE.md  SECRETS.md  SECURITY.md  SUPPORT.md  dependabot.yml
.husky/: pre-commit
.storybook/: preview.ts
.vercel/: project.json
a11y/: README.md
agroisync_apks_unpacked/: toc.pb
ai/: auto-protection.ts
amplify/: amplify-config-perfect.yml  dns-config.json  domain-config.json  environment-config.json  global-access-config.json  team-provider-info.json
analytics/: analytics_real_0.ts  analytics_real_1.ts  analytics_real_2.ts  analytics_real_3.ts  dashboard.tsx  heatmaps.ts
api/: README.md  health.js  index.js  next.config.js  package.json  tailwind.config.js
app/: globals.css  layout.tsx  page.tsx
backend/: .babelrc  .dev.vars  .dockerignore  .editorconfig  .env.example  .env.example.txt  .eslintrc-temp.json  .eslintrc.cjs  .eslintrc.fix.json  .eslintrc.js  .eslintrc.json  .eslintrc.production.json  .gitignore  .huskyrc  .lintstagedrc  .lintstagedrc.js  .npmrc  .prettierignore  .prettierrc  .prettierrc.js  .releaserc.js  API-ROUTES-DOCUMENTATION.md  Anchor.toml  BACKEND_ANALYSIS_REPORT.md  DEPLOY-ADMIN-PANEL.md  DEPLOY_INSTRUCTIONS.md  Dockerfile  Dockerfile.backup  Dockerfile.simple  INSTALACAO_RAPIDA.md  METAMASK_AUTH_SETUP.md  MODULO_EMAIL_CORPORATIVO.md  PYTHON_RAILWAY_FIXES_COMPLETE.md  QUICK_START.md  RAILWAY_DEPLOY.md  README-uploads-and-checks.md  README.md  SCHEMA_SETUP.md  SECRETS_SETUP.md  SECURITY-README.md  (+81 more)
backend/rust/contracts/solana/: Anchor.toml  Cargo.toml
backend/rust/contracts/solana/src/: lib.rs
backend/rust/contracts/solana/src/instructions/: claim_rewards.rs  mod.rs  stake_tokens.rs
backend/rust/contracts/solana/tests/: agrotm.test.ts
backup_features/: AgriNews.js  ConsentBanner.js  SEO.js  weatherService.js
blog/: README.md
components/: AnimatedCard.tsx  Loader.tsx  Modal.tsx  NFTMap.tsx  NFTMetricsCard.tsx  NeonButton.tsx
config/: config_real_0.ts  config_real_1.ts  config_real_2.ts  config_real_3.ts  constants.ts  eslint.config.js  firebase.ts  jest.config.js  lighthouse.config.js  project-config.yml  routes.ts
context/: AuthContext.tsx  context_real_0.ts  context_real_1.ts  context_real_2.ts  context_real_3.ts
contexts/: Web3Context.tsx
contracts/: AGROTM.sol  AGROTM_NFT.sol  AGROTM_anchor.sol  Anchor.toml  Cargo.toml  README.md  package.json  rust-toolchain.toml
contracts/ethereum/: .env.example  BuyWithCommission.sol  README.md  package.json
contracts/ethereum/contracts/: Staking.sol
contracts/ethereum/contracts/mocks/: MockERC1155.sol  MockERC20.sol  MockERC721.sol  index.ts
contracts/ethereum/scripts/: deployCommissionContract.ts
contracts/ethereum/test/: AGROTMToken.test.ts  BuyWithCommission.test.ts  NFTAgro.test.ts  Staking.test.ts
dao/: governance-contracts.sol  proposals.tsx
dapp/: index.tsx
defi-dashboard/: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  hardhat.config.ts  implementation-plan.md  instrucoes-correcao-testes.md  instrucoes-correcao-vercel.md  jest.config.js  jest.setup.js  next.config.js  next.config.js.corrected  package.json  package.json.corrected  push-to-github.ps1  push-to-github.sh  tailwind.config.js  tsconfig.json  vercel.json
docs/: DEPENDENCY-MANAGEMENT.md  FAQ.md  README.md  architecture.md  checklist-incident-response.md  gateway-endpoints.md  infra-diagram.mmd  notification-service-endpoints.md  payment-service-endpoints.md  playbook-data-breach.md  playbook-ddos-response.md  playbook-incident-response.md  playbook-insider-threat.md  playbook-ransomware.md  redoc.html  runbook-restore-db.md  swagger-ui.html  tokenomics.md  usage-guide.md  user-service-endpoints.md
docs-site/: index.tsx
emails/: sendNFTMinted.ts  sendStakeConfirmation.ts  sendWelcomeEmail.ts
firebase/: firebase.ts
frontend/: .babelrc  .ceignore  .domain  .env.example  .env.firebase  .eslintignore  .eslintrc-ignore-all.json  .eslintrc.js  .eslintrc.json  .eslintrc.json.backup  .firebaserc  .gitignore  .npmrc  .prettierrc  .prettierrc.js  .vercelignore  ACCESSIBILITY-IMPROVEMENTS.md  AGROISYNC_CONFIGURATION_COMPLETE.md  AMPLIFY-DEPLOY-README.md  AMPLIFY_DEPLOY_INSTRUCTIONS.md  AMPLIFY_DEPLOY_READY.md  ANIMATED-STARFIELD-UNIVERSE-GUIDE.md  API_INTEGRATION_SUMMARY.md  APLICAR-CONFIGURACAO.ps1  AUTHENTICATION_IMPLEMENTATION_COMPLETE.md  BUILD_ANDROID_COMPLETE.md  BUILD_COMPLETO_SUCESSO.md  BUILD_FIX_FINAL.md  BUILD_FIX_INSTRUCTIONS.md  BUILD_STATUS_SUCCESS.md  BUILD_VERSION.txt  CAPACITOR_EXPLICACAO.md  COMANDOS-IBM-SHELL.txt  CORRECAO_APP_MOBILE.md  CRIAR-APLICACAO-FUNCIONANDO.ps1  CRIAR-PROJETO-IBM.ps1  DEPLOY-APLICACAO-EXISTENTE.ps1  DEPLOY-COMPLETO-FINAL.ps1  DEPLOY-CORRETO.ps1  DEPLOY-FINAL.ps1  (+164 more)
frontend-next/: .env.example  .gitignore  README.md  csp-hashes.js  lighthouserc.json  middleware.js  next-sitemap.config.js  next.config.js  package.json  setup.js  wrangler.toml
frontend/contracts/: Cargo.toml
frontend/contracts/abis/: BuyWithCommission.json
frontend/contracts/ethereum/: .gitignore  hardhat.config.ts
frontend/contracts/ethereum/contracts/: AGROTMToken.sol  NFTAgro.sol
frontend/contracts/ethereum/scripts/: deploy.ts
functions/: _middleware.js
hooks/: animation.ts  hooks_extra_1.ts  useCommodityPrices.ts  (+14 more)
(+2506 files in other folders)
