[package]
name = "agrotm"
version = "0.1.0"
description = "Agrotm Solana DeFi Platform Smart Contracts"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agrotm"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.16.0"
spl-token = "4.0.0"
spl-associated-token-account = "2.2.0"
spl-token-registry = "0.2.0"
mpl-token-metadata = "3.2.0"
mpl-candy-machine = "4.0.0"
mpl-token-auth-rules = "1.0.0"
mpl-bubblegum = "0.4.0"
mpl-compression = "0.1.0"
mpl-token-2022 = "0.9.0"
spl-governance = "0.3.0"
spl-governance-addin-meta = "0.3.0"
spl-governance-addin-proposal = "0.3.0"
spl-governance-addin-voter = "0.3.0"
spl-governance-addin-upgrade = "0.3.0"
spl-governance-addin-multisig = "0.3.0"
spl-governance-addin-single-vote = "0.3.0"
spl-governance-addin-proposal-vote = "0.3.0"
spl-governance-addin-proposal-deposit = "0.3.0"
spl-governance-addin-proposal-vote-record = "0.3.0"
spl-governance-addin-proposal-vote-record-v2 = "0.3.0"
spl-governance-addin-proposal-vote-record-v3 = "0.3.0"
spl-governance-addin-proposal-vote-record-v4 = "0.3.0"
spl-governance-addin-proposal-vote-record-v5 = "0.3.0"
spl-governance-addin-proposal-vote-record-v6 = "0.3.0"
spl-governance-addin-proposal-vote-record-v7 = "0.3.0"
spl-governance-addin-proposal-vote-record-v8 = "0.3.0"
spl-governance-addin-proposal-vote-record-v9 = "0.3.0"
spl-governance-addin-proposal-vote-record-v10 = "0.3.0"
spl-governance-addin-proposal-vote-record-v11 = "0.3.0"
spl-governance-addin-proposal-vote-record-v12 = "0.3.0"
spl-governance-addin-proposal-vote-record-v13 = "0.3.0"
spl-governance-addin-proposal-vote-record-v14 = "0.3.0"
spl-governance-addin-proposal-vote-record-v15 = "0.3.0"
spl-governance-addin-proposal-vote-record-v16 = "0.3.0"
spl-governance-addin-proposal-vote-record-v17 = "0.3.0"
spl-governance-addin-proposal-vote-record-v18 = "0.3.0"
spl-governance-addin-proposal-vote-record-v19 = "0.3.0"
spl-governance-addin-proposal-vote-record-v20 = "0.3.0"
spl-governance-addin-proposal-vote-record-v21 = "0.3.0"
spl-governance-addin-proposal-vote-record-v22 = "0.3.0"
spl-governance-addin-proposal-vote-record-v23 = "0.3.0"
spl-governance-addin-proposal-vote-record-v24 = "0.3.0"
spl-governance-addin-proposal-vote-record-v25 = "0.3.0"
spl-governance-addin-proposal-vote-record-v26 = "0.3.0"
spl-governance-addin-proposal-vote-record-v27 = "0.3.0"
spl-governance-addin-proposal-vote-record-v28 = "0.3.0"
spl-governance-addin-proposal-vote-record-v29 = "0.3.0"
spl-governance-addin-proposal-vote-record-v30 = "0.3.0"
spl-governance-addin-proposal-vote-record-v31 = "0.3.0"
spl-governance-addin-proposal-vote-record-v32 = "0.3.0"
spl-governance-addin-proposal-vote-record-v33 = "0.3.0"
spl-governance-addin-proposal-vote-record-v34 = "0.3.0"
spl-governance-addin-proposal-vote-record-v35 = "0.3.0"
spl-governance-addin-proposal-vote-record-v36 = "0.3.0"
spl-governance-addin-proposal-vote-record-v37 = "0.3.0"
spl-governance-addin-proposal-vote-record-v38 = "0.3.0"
spl-governance-addin-proposal-vote-record-v39 = "0.3.0"
spl-governance-addin-proposal-vote-record-v40 = "0.3.0"
spl-governance-addin-proposal-vote-record-v41 = "0.3.0"
spl-governance-addin-proposal-vote-record-v42 = "0.3.0"
spl-governance-addin-proposal-vote-record-v43 = "0.3.0"
spl-governance-addin-proposal-vote-record-v44 = "0.3.0"
spl-governance-addin-proposal-vote-record-v45 = "0.3.0"
spl-governance-addin-proposal-vote-record-v46 = "0.3.0"
spl-governance-addin-proposal-vote-record-v47 = "0.3.0"
spl-governance-addin-proposal-vote-record-v48 = "0.3.0"
spl-governance-addin-proposal-vote-record-v49 = "0.3.0"
spl-governance-addin-proposal-vote-record-v50 = "0.3.0"
spl-governance-addin-proposal-vote-record-v51 = "0.3.0"
spl-governance-addin-proposal-vote-record-v52 = "0.3.0"
spl-governance-addin-proposal-vote-record-v53 = "0.3.0"
spl-governance-addin-proposal-vote-record-v54 = "0.3.0"
spl-governance-addin-proposal-vote-record-v55 = "0.3.0"
spl-governance-addin-proposal-vote-record-v56 = "0.3.0"
spl-governance-addin-proposal-vote-record-v57 = "0.3.0"
spl-governance-addin-proposal-vote-record-v58 = "0.3.0"
spl-governance-addin-proposal-vote-record-v59 = "0.3.0"
spl-governance-addin-proposal-vote-record-v60 = "0.3.0"
spl-governance-addin-proposal-vote-record-v61 = "0.3.0"
spl-governance-addin-proposal-vote-record-v62 = "0.3.0"
spl-governance-addin-proposal-vote-record-v63 = "0.3.0"
spl-governance-addin-proposal-vote-record-v64 = "0.3.0"
spl-governance-addin-proposal-vote-record-v65 = "0.3.0"
spl-governance-addin-proposal-vote-record-v66 = "0.3.0"
spl-governance-addin-proposal-vote-record-v67 = "0.3.0"
spl-governance-addin-proposal-vote-record-v68 = "0.3.0"
spl-governance-addin-proposal-vote-record-v69 = "0.3.0"
spl-governance-addin-proposal-vote-record-v70 = "0.3.0"
spl-governance-addin-proposal-vote-record-v71 = "0.3.0"
spl-governance-addin-proposal-vote-record-v72 = "0.3.0"
spl-governance-addin-proposal-vote-record-v73 = "0.3.0"
spl-governance-addin-proposal-vote-record-v74 = "0.3.0"
spl-governance-addin-proposal-vote-record-v75 = "0.3.0"
spl-governance-addin-proposal-vote-record-v76 = "0.3.0"
spl-governance-addin-proposal-vote-record-v77 = "0.3.0"
spl-governance-addin-proposal-vote-record-v78 = "0.3.0"
spl-governance-addin-proposal-vote-record-v79 = "0.3.0"
spl-governance-addin-proposal-vote-record-v80 = "0.3.0"
spl-governance-addin-proposal-vote-record-v81 = "0.3.0"
spl-governance-addin-proposal-vote-record-v82 = "0.3.0"
spl-governance-addin-proposal-vote-record-v83 = "0.3.0"
spl-governance-addin-proposal-vote-record-v84 = "0.3.0"
spl-governance-addin-proposal-vote-record-v85 = "0.3.0"
spl-governance-addin-proposal-vote-record-v86 = "0.3.0"
spl-governance-addin-proposal-vote-record-v87 = "0.3.0"
spl-governance-addin-proposal-vote-record-v88 = "0.3.0"
spl-governance-addin-proposal-vote-record-v89 = "0.3.0"
spl-governance-addin-proposal-vote-record-v90 = "0.3.0"
spl-governance-addin-proposal-vote-record-v91 = "0.3.0"
spl-governance-addin-proposal-vote-record-v92 = "0.3.0"
spl-governance-addin-proposal-vote-record-v93 = "0.3.0"
spl-governance-addin-proposal-vote-record-v94 = "0.3.0"
spl-governance-addin-proposal-vote-record-v95 = "0.3.0"
spl-governance-addin-proposal-vote-record-v96 = "0.3.0"
spl-governance-addin-proposal-vote-record-v97 = "0.3.0"
spl-governance-addin-proposal-vote-record-v98 = "0.3.0"
spl-governance-addin-proposal-vote-record-v99 = "0.3.0"
spl-governance-addin-proposal-vote-record-v100 = "0.3.0"

[workspace]
members = [
    "programs/agrotm",
    "programs/agrotm-token",
    "programs/agrotm-staking",
    "programs/agrotm-nft",
    "programs/agrotm-marketplace",
    "programs/agrotm-oracle",
    "programs/agrotm-governance",
]

[workspace.dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.16.0"
spl-token = "4.0.0"
spl-associated-token-account = "2.2.0"
spl-token-registry = "0.2.0"
mpl-token-metadata = "3.2.0"
mpl-candy-machine = "4.0.0"
mpl-token-auth-rules = "1.0.0"
mpl-bubblegum = "0.4.0"
mpl-compression = "0.1.0"
mpl-token-2022 = "0.9.0"
spl-governance = "0.3.0"
spl-governance-addin-meta = "0.3.0"
spl-governance-addin-proposal = "0.3.0"
spl-governance-addin-voter = "0.3.0"
spl-governance-addin-upgrade = "0.3.0"
spl-governance-addin-multisig = "0.3.0"
spl-governance-addin-single-vote = "0.3.0"
spl-governance-addin-proposal-vote = "0.3.0"
spl-governance-addin-proposal-deposit = "0.3.0"
spl-governance-addin-proposal-vote-record = "0.3.0"
spl-governance-addin-proposal-vote-record-v2 = "0.3.0"
spl-governance-addin-proposal-vote-record-v3 = "0.3.0"
spl-governance-addin-proposal-vote-record-v4 = "0.3.0"
spl-governance-addin-proposal-vote-record-v5 = "0.3.0"
spl-governance-addin-proposal-vote-record-v6 = "0.3.0"
spl-governance-addin-proposal-vote-record-v7 = "0.3.0"
spl-governance-addin-proposal-vote-record-v8 = "0.3.0"
spl-governance-addin-proposal-vote-record-v9 = "0.3.0"
spl-governance-addin-proposal-vote-record-v10 = "0.3.0"
spl-governance-addin-proposal-vote-record-v11 = "0.3.0"
spl-governance-addin-proposal-vote-record-v12 = "0.3.0"
spl-governance-addin-proposal-vote-record-v13 = "0.3.0"
spl-governance-addin-proposal-vote-record-v14 = "0.3.0"
spl-governance-addin-proposal-vote-record-v15 = "0.3.0"
spl-governance-addin-proposal-vote-record-v16 = "0.3.0"
spl-governance-addin-proposal-vote-record-v17 = "0.3.0"
spl-governance-addin-proposal-vote-record-v18 = "0.3.0"
spl-governance-addin-proposal-vote-record-v19 = "0.3.0"
spl-governance-addin-proposal-vote-record-v20 = "0.3.0"
spl-governance-addin-proposal-vote-record-v21 = "0.3.0"
spl-governance-addin-proposal-vote-record-v22 = "0.3.0"
spl-governance-addin-proposal-vote-record-v23 = "0.3.0"
spl-governance-addin-proposal-vote-record-v24 = "0.3.0"
spl-governance-addin-proposal-vote-record-v25 = "0.3.0"
spl-governance-addin-proposal-vote-record-v26 = "0.3.0"
spl-governance-addin-proposal-vote-record-v27 = "0.3.0"
spl-governance-addin-proposal-vote-record-v28 = "0.3.0"
spl-governance-addin-proposal-vote-record-v29 = "0.3.0"
spl-governance-addin-proposal-vote-record-v30 = "0.3.0"
spl-governance-addin-proposal-vote-record-v31 = "0.3.0"
spl-governance-addin-proposal-vote-record-v32 = "0.3.0"
spl-governance-addin-proposal-vote-record-v33 = "0.3.0"
spl-governance-addin-proposal-vote-record-v34 = "0.3.0"
spl-governance-addin-proposal-vote-record-v35 = "0.3.0"
spl-governance-addin-proposal-vote-record-v36 = "0.3.0"
spl-governance-addin-proposal-vote-record-v37 = "0.3.0"
spl-governance-addin-proposal-vote-record-v38 = "0.3.0"
spl-governance-addin-proposal-vote-record-v39 = "0.3.0"
spl-governance-addin-proposal-vote-record-v40 = "0.3.0"
spl-governance-addin-proposal-vote-record-v41 = "0.3.0"
spl-governance-addin-proposal-vote-record-v42 = "0.3.0"
spl-governance-addin-proposal-vote-record-v43 = "0.3.0"
spl-governance-addin-proposal-vote-record-v44 = "0.3.0"
spl-governance-addin-proposal-vote-record-v45 = "0.3.0"
spl-governance-addin-proposal-vote-record-v46 = "0.3.0"
spl-governance-addin-proposal-vote-record-v47 = "0.3.0"
spl-governance-addin-proposal-vote-record-v48 = "0.3.0"
spl-governance-addin-proposal-vote-record-v49 = "0.3.0"
spl-governance-addin-proposal-vote-record-v50 = "0.3.0"
spl-governance-addin-proposal-vote-record-v51 = "0.3.0"
spl-governance-addin-proposal-vote-record-v52 = "0.3.0"
spl-governance-addin-proposal-vote-record-v53 = "0.3.0"
spl-governance-addin-proposal-vote-record-v54 = "0.3.0"
spl-governance-addin-proposal-vote-record-v55 = "0.3.0"
spl-governance-addin-proposal-vote-record-v56 = "0.3.0"
spl-governance-addin-proposal-vote-record-v57 = "0.3.0"
spl-governance-addin-proposal-vote-record-v58 = "0.3.0"
spl-governance-addin-proposal-vote-record-v59 = "0.3.0"
spl-governance-addin-proposal-vote-record-v60 = "0.3.0"
spl-governance-addin-proposal-vote-record-v61 = "0.3.0"
spl-governance-addin-proposal-vote-record-v62 = "0.3.0"
spl-governance-addin-proposal-vote-record-v63 = "0.3.0"
spl-governance-addin-proposal-vote-record-v64 = "0.3.0"
spl-governance-addin-proposal-vote-record-v65 = "0.3.0"
spl-governance-addin-proposal-vote-record-v66 = "0.3.0"
spl-governance-addin-proposal-vote-record-v67 = "0.3.0"
spl-governance-addin-proposal-vote-record-v68 = "0.3.0"
spl-governance-addin-proposal-vote-record-v69 = "0.3.0"
spl-governance-addin-proposal-vote-record-v70 = "0.3.0"
spl-governance-addin-proposal-vote-record-v71 = "0.3.0"
spl-governance-addin-proposal-vote-record-v72 = "0.3.0"
spl-governance-addin-proposal-vote-record-v73 = "0.3.0"
spl-governance-addin-proposal-vote-record-v74 = "0.3.0"
spl-governance-addin-proposal-vote-record-v75 = "0.3.0"
spl-governance-addin-proposal-vote-record-v76 = "0.3.0"
spl-governance-addin-proposal-vote-record-v77 = "0.3.0"
spl-governance-addin-proposal-vote-record-v78 = "0.3.0"
spl-governance-addin-proposal-vote-record-v79 = "0.3.0"
spl-governance-addin-proposal-vote-record-v80 = "0.3.0"
spl-governance-addin-proposal-vote-record-v81 = "0.3.0"
spl-governance-addin-proposal-vote-record-v82 = "0.3.0"
spl-governance-addin-proposal-vote-record-v83 = "0.3.0"
spl-governance-addin-proposal-vote-record-v84 = "0.3.0"
spl-governance-addin-proposal-vote-record-v85 = "0.3.0"
spl-governance-addin-proposal-vote-record-v86 = "0.3.0"
spl-governance-addin-proposal-vote-record-v87 = "0.3.0"
spl-governance-addin-proposal-vote-record-v88 = "0.3.0"
spl-governance-addin-proposal-vote-record-v89 = "0.3.0"
spl-governance-addin-proposal-vote-record-v90 = "0.3.0"
spl-governance-addin-proposal-vote-record-v91 = "0.3.0"
spl-governance-addin-proposal-vote-record-v92 = "0.3.0"
spl-governance-addin-proposal-vote-record-v93 = "0.3.0"
spl-governance-addin-proposal-vote-record-v94 = "0.3.0"
spl-governance-addin-proposal-vote-record-v95 = "0.3.0"
spl-governance-addin-proposal-vote-record-v96 = "0.3.0"
spl-governance-addin-proposal-vote-record-v97 = "0.3.0"
spl-governance-addin-proposal-vote-record-v98 = "0.3.0"
spl-governance-addin-proposal-vote-record-v99 = "0.3.0"
spl-governance-addin-proposal-vote-record-v100 = "0.3.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3
debug = false
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.test]
opt-level = 0
debug = true
overflow-checks = true 