[package]
name = "agrotm"
version = "0.1.0"
description = "AGROTM Solana Smart Contracts"
edition = "2021"
license = "MIT"
repository = "https://github.com/agrotm/agrotm-solana"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "~1.17.0"
spl-token = "4.0.0"
spl-associated-token-account = "2.2.0"
mpl-token-metadata = "3.2.0"

[dev-dependencies]
solana-program-test = "~1.17.0"
solana-sdk = "~1.17.0"
tokio = { version = "1.0", features = ["full"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1 